--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
 H&Z ROSETTE DESIGNER
 by Hans / H&Z LIFE
-version 2018/9/3
+version 2018/10/9
 -->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
@@ -17,7 +17,7 @@ version 2018/9/3
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 	<link rel="stylesheet" type="text/css" href="iconfont/iconfont.css"/>
 
-	<title>H&amp;Z Rosette Designer beta 2.6</title>
+	<title>H&amp;Z Rosette Designer beta 2.7</title>
 
 </head>
 
@@ -43,10 +43,10 @@ version 2018/9/3
 
 	<div class="tile_box default_color color1">
 		<div class="tile">
-			<img id="cell_handle_1" class="cell_handle cell_handle_v" src="images/handlev.png" />
+			<!-- <img id="cell_handle_1" class="cell_handle cell_handle_v" src="images/handlev.png" />
 			<img id="cell_handle_2" class="cell_handle cell_handle_v" src="images/handlev.png" />
 			<img id="cell_handle_3" class="cell_handle cell_handle_h" src="images/handleh.png" />
-			<img id="cell_handle_4" class="cell_handle cell_handle_h" src="images/handleh.png" />
+			<img id="cell_handle_4" class="cell_handle cell_handle_h" src="images/handleh.png" /> -->
 			<div id="RT" class="oric"></div>
 		</div>
 	</div>
@@ -159,23 +159,24 @@ version 2018/9/3
 <!-- 菜单弹框 -->
 <div class="menu_sheet">
 	<ul>
-		<li class="btn">↩ 撤销</li>
-		<li class="btn" id="menuClear">🚮 清空</li>
-		<li class="btn">🔧 载入模板…</li>
+		<!-- <li class="btn">↩ 撤销</li> -->
+		<!-- <li class="btn" id="menuClear">🚮 清空</li> -->
+		<li class="btn" id="menuClear">↩ 还原</li>
+		<!-- <li class="btn">🔧 载入模板…</li> -->
 		<li class="spline"></li>
-		<li class="btn">导出效果图</li>
+		<!-- <li class="btn">导出效果图</li> -->
 		<li class="btn" id="menuExportData">导出数据</li>
+		<!-- <li class="spline"></li> -->
+		<!-- <li class="btn">提需求、提建议</li> -->
+		<!-- <li class="btn">💪 力挺作者「汉斯」</li> -->
 		<li class="spline"></li>
-		<li class="btn">提需求、提建议</li>
-		<li class="btn">💪 力挺作者「汉斯」</li>
-		<li class="spline"></li>
-		<li class="signature"><p>H·Z ROSETTE DESIGNER</p><p>beta 2.6 @ 2018-8</p></li>
+		<li class="signature"><p>H·Z ROSETTE DESIGNER</p><p>beta 2.7.1 @ 2018-10</p></li>
 	</ul>
 </div>
 
 
 <!-- 行列操作弹框 -->
-<div class="action_sheet">
+<!-- <div class="action_sheet">
 	<ul>
 		<li id="btn_addrow" class="btn btn_primary"><span>+&nbsp;&nbsp;添加行</span></li>
 		<li id="btn_addlinerow" class="btn"><span>+&nbsp;&nbsp;添加线条</span></li>
@@ -183,7 +184,7 @@ version 2018/9/3
 		<li id="btn_delrow" class="btn"><span>删除行</span></li>
 		<li id="btn_delcol" class="btn"><span>删除列</span></li>
 	</ul>
-</div>
+</div> -->
 
 
 <!-- 色表弹框 -->
@@ -196,7 +197,8 @@ version 2018/9/3
 		<li id="color5" class="color "><span class="color_thumb color5"></span><span class="color_name">印度玫瑰木</span></li>
 		<li id="color6" class="color "><span class="color_thumb color6"></span><span class="color_name">染色绿</span></li>
 		<li id="color7" class="color "><span class="color_thumb color7"></span><span class="color_name">染色红</span></li>
-		<li id="color8" class="color "><span class="color_thumb color8"></span><span class="color_name">染色黑</span></li>
+		<li id="color8" class="color "><span class="color_thumb color8"></span><span class="color_name">染色蓝</span></li>
+		<li id="color9" class="color "><span class="color_thumb color9"></span><span class="color_name">染色黑</span></li>
 	</ul>
 </div>
 
