--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@ version 2018/10/9
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<script type="text/javascript" src="jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="svg.min.js"></script>
-	<script type="text/javascript" src="tile.js"></script>
-	<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="jcanvas.min.js"></script>
+	<!-- <script type="text/javascript" src="tile.js"></script> -->
+	<!-- <script type="text/javascript" src="main.js"></script> -->
 
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 	<link rel="stylesheet" type="text/css" href="iconfont/iconfont.css"/>
 
-	<title>H&amp;Z Rosette Designer beta 2.7</title>
+	<title>H&amp;Z Rosette Designer beta 3.0</title>
 
 </head>
 
@@ -31,9 +31,9 @@ version 2018/10/9
 <header><div class="menu_btn"></div></header>
 
 <div class="pads pad_preview default_color color1">
-	<div id="rosette" class="SVG_box"></div>
+	<div class="canvas_box"></div>
 	<div id="fingerboard" class="SVG_box"></div>
-	<div id="soundhole" class="SVG_box"></div>
+	<!-- <div id="soundhole" class="SVG_box"></div> -->
 </div>
 
 
@@ -204,6 +204,12 @@ version 2018/10/9
 
 
 <div class="mask"></div>
+
+
+
+
+
+<script type="text/javascript" src="rosette-preview.js"></script>
 
 
 
